Substantial changes to whole project

--- a/snackspace.cfg
+++ b/snackspace.cfg
@@ -1,5 +1,13 @@
 [ClientConfig]
+
+## Set localmode to 'y' to try and connect to localhost server
 localmode = y
+
+## Set rfid port to e.g. /dev/ttyUSB0, or set to 'dummy' to fake one
 rfidport = dummy
+
+## Valid limitaction settings: 'warn', 'deny'  - defaults to deny
 limitaction = warn
-creditaction = disallow
+
+## Valid credit action settings: 'always', 'whenindebt', 'disallow' - defaults to disallow
+creditaction = whenindebt 
